2nd training/Community/Community/Community1/force-app/main/default/objects/Crating_Instruction__c/Crating_Instruction__c.object-meta.xml
<CustomObject>
    <label>Crate Fabrication Instructions</label>
    <nameField>
        <displayFormat>CRI{YY}{MM}{DD}-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Crate Fabrication Instructions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>