2nd training/Community/Community/Community1/force-app/main/default/objects/Crating_Instruction__c/fields/AM_PM__c.field-meta.xml
<CustomField>
    <fullName>AM_PM__c</fullName>
    <label>Collection Time from FP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>