2nd training/Community/Community/Community1/force-app/main/default/objects/Crating_Instruction__c/fields/Artwork_Type_4__c.field-meta.xml
<CustomField>
    <fullName>Artwork_Type_4__c</fullName>
    <label>Artwork Type 艺术品类型</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Painting 画</fullName>
            </value>
            <value>
                <fullName>Sculpture  雕塑</fullName>
            </value>
            <value>
                <fullName>Print 印</fullName>
            </value>
            <value>
                <fullName>Photograph 照片</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>