2nd training/Community/Community/Community1/force-app/main/default/objects/Crating_Instruction__c/fields/Breadth_4__c.field-meta.xml
<CustomField>
    <fullName>Breadth_4__c</fullName>
    <label>Breadth 宽</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>