2nd training/Community/Community/Community1/force-app/main/default/objects/Crating_Instruction__c/fields/Crate_Details__c.field-meta.xml
<CustomField>
    <fullName>Crate_Details__c</fullName>
    <defaultValue>&quot;No. / LxBxH (cm) / Description / Opening Side&quot;</defaultValue>
    <label>Crate Details 木箱</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>