2nd training/Community/Community/Community1/force-app/main/default/objects/Crating_Instruction__c/fields/Crate_Noc__c.field-meta.xml
<CustomField>
    <fullName>Crate_Noc__c</fullName>
    <label>Crate No</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>