2nd training/Community/Community/Community1/force-app/main/default/objects/Crating_Instruction__c/fields/Crate_order_to__c.field-meta.xml
<CustomField>
    <fullName>Crate_order_to__c</fullName>
    <label>Crate Order to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HT Workshop</fullName>
            </value>
            <value>
                <fullName>External Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>