2nd training/Community/Community/Community1/force-app/main/default/objects/Crating_Instruction__c/fields/Crate_Type__c.field-meta.xml
<CustomField>
    <fullName>Crate_Type__c</fullName>
    <label>Crate Type 箱子类型</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>