2nd training/Community/Community/Community1/force-app/main/default/objects/Crating_Instruction__c/fields/Crate_Type_HK__c.field-meta.xml
<CustomField>
    <fullName>Crate_Type_HK__c</fullName>
    <label>Crate Type (HK) 箱子类型</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A料</fullName>
            </value>
            <value>
                <fullName>B料</fullName>
            </value>
            <value>
                <fullName>畫/雕塑箱</fullName>
            </value>
            <value>
                <fullName>A-字架</fullName>
            </value>
            <value>
                <fullName>Travel Frame</fullName>
            </value>
            <value>
                <fullName>其他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>