2nd training/Community/Community/Community1/force-app/main/default/objects/Crating_Instruction__c/fields/Crating_Completion_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Crating_Completion_Date_Time__c</fullName>
    <label>Crating Completion Date/Time</label>
    <type>DateTime</type>
</CustomField>