2nd training/Community/Community/Community1/force-app/main/default/objects/Crating_Instruction__c/fields/Date_of_Order__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Order__c</fullName>
    <label>Date of Order 订购曰期</label>
    <type>Date</type>
</CustomField>