2nd training/Community/Community/Community1/force-app/main/default/objects/Crating_Instruction__c/fields/Foam__c.field-meta.xml
<CustomField>
    <fullName>Foam__c</fullName>
    <label>Foam</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>PE - 1 inch</fullName>
            </value>
            <value>
                <fullName>PE - 2 inch</fullName>
            </value>
            <value>
                <fullName>Grey  - 1 inch</fullName>
            </value>
            <value>
                <fullName>Grey  - 2 inch</fullName>
            </value>
            <value>
                <fullName>Styrofoam - 1 inch</fullName>
            </value>
            <value>
                <fullName>Styrofoam - 2 inch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>