2nd training/Community/Community/Community1/force-app/main/default/objects/Crating_Instruction__c/fields/Fumigation__c.field-meta.xml
<CustomField>
    <fullName>Fumigation__c</fullName>
    <label>Fumigation 熏蒸处理</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No 否</fullName>
                <default>true</default>
                <label>No 否</label>
            </value>
            <value>
                <fullName>Yes 是</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>