2nd training/Community/Community/Community1/force-app/main/default/objects/Crating_Instruction__c/fields/Job_Reference__c.field-meta.xml
<CustomField>
    <fullName>Job_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Reference   工作编号</label>
    <referenceTo>Job_Reference__c</referenceTo>
    <relationshipName>Crating_Instructions</relationshipName>
    <type>Lookup</type>
</CustomField>