2nd training/Community/Community/Community1/force-app/main/default/objects/Crating_Instruction__c/fields/Length_3__c.field-meta.xml
<CustomField>
    <fullName>Length_3__c</fullName>
    <label>Length 长</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>