2nd training/Community/Community/Community1/force-app/main/default/objects/Crating_Instruction__c/fields/No_Of_Crates__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Crates__c</fullName>
    <label>No Of Crates</label>
    <summaryForeignKey>Crafting_Details__c.Crating_Instruction__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>