2nd training/Community/Community/Community1/force-app/main/default/objects/Crating_Instruction__c/fields/Notes_4__c.field-meta.xml
<CustomField>
    <fullName>Notes_4__c</fullName>
    <defaultValue>&quot;Use Plywood 用合板&quot;</defaultValue>
    <label>Notes 注释</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>