2nd training/Community/Community/Community1/force-app/main/default/objects/Crating_Instruction__c/fields/Opening_Side_4__c.field-meta.xml
<CustomField>
    <fullName>Opening_Side_4__c</fullName>
    <label>Opening Side 开箱面</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Broadside 宽度面</fullName>
            </value>
            <value>
                <fullName>Top 顶部</fullName>
            </value>
            <value>
                <fullName>Side + Top 宽面+顶部</fullName>
            </value>
            <value>
                <fullName>All 全面</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>