2nd training/Community/Community/Community1/force-app/main/default/objects/Crating_Instruction__c/fields/Opening_Side_HK4__c.field-meta.xml
<CustomField>
    <fullName>Opening_Side_HK4__c</fullName>
    <label>Opening Side 開箱面</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>前開</fullName>
            </value>
            <value>
                <fullName>頂開</fullName>
            </value>
            <value>
                <fullName>其他(見注釋)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>